dev: Add api doc for BookingWithoutReview.
